# Kim-and-Chang-

./: .env.example  .gitignore  CLAUDE.md  README.md  backtest.py  bot.py  broker.py  config.py  dashboard.py  db.py  notifications.py  pyproject.toml  safety.py  universe.py
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
Instructions/: 00_OVERALL_PLAN.md  01_PHASE_SCAFFOLDING.md  02_PHASE_DATABASE.md  03_PHASE_NOTIFICATIONS.md  04_PHASE_SAFETY.md  05_PHASE_BROKER.md  06_PHASE_STRATEGIES.md  07_PHASE_BOT.md  08_PHASE_DASHBOARD.md  09_PHASE_DEPLOY.md  10_PHASE_USER_README.md  APIRequest.md  CHECKLIST.md  DOMAIN.md  PATTERNS.md  README.md
Instructions/.obsidian/: workspace.json
Instructions/sessions/: session0417.md  session0418.md  session0423.md  session0428.md
deploy/: install.sh  trading-bot.service  trading-dashboard.service  update.sh
pages/: log.py  positions.py
strategies/: __init__.py  base.py  bollinger_strategy.py  ema_crossover_strategy.py  macd_strategy.py  momentum_strategy.py  rsi_strategy.py  short_ma_strategy.py
